[feat] Added small print to G1 to demonstrate gc logging.